--- a/build.xml
+++ b/build.xml
@@ -7,11 +7,12 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="json" default="default" basedir=".">
-    <description>Builds, tests, and runs the project json.</description>
+<project name="analyzer" default="default" basedir=".">
+    <description>Builds, tests, and runs the project analyzer.</description>
     <import file="nbproject/build-impl.xml"/>
     <target name="-post-jar" description="Bundle javadoc to jar" depends="javadoc">
         <jar compress="${jar.compress}" basedir="${dist.javadoc.dir}" jarfile="${dist.dir}/${application.title}-javadoc.jar"/>
+        <jar compress="${jar.compress}" basedir="${src.dir}" jarfile="${dist.dir}/${application.title}-sources.jar"/>
     </target>
     <!--
 
@@ -61,7 +62,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="json-impl.jar">
+        <target name="run" depends="analyzer-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
